<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_settings_option"
        android:title="@string/menu_settings_title"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"/>

</menu>