...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular_text"
                android:padding="@dimen/margin_small"
                android:text="@string/saved_can" />
            <Button
                android:id="@+id/can_menu_action"
                android:layout_margin="@dimen/margin_small"
                android:textSize="@dimen/regular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/pin_saved"
...
                    android:layout_marginVertical="@dimen/margin_small"
                    android:textSize="@dimen/regular_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                <Button
                    android:id="@+id/pin_menu_action"
                    android:layout_marginHorizontal="@dimen/margin"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:textSize="@dimen/regular_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
...
